@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.902.2.6 2014/08/31 21:20:47 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.902.2.7 2014/09/01 16:44:32 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -11472,12 +11472,12 @@ Ffigure_missing
  `<backangle>` is the angle (in degrees) the back branches make with the arrow
  (in the same direction as `<angle>`). It is ignored if the style is `nofilled`.
 
- Specifying `filled` produces filled arrow heads (if heads are used).
- Specifying `noborder` draws filled arrow heads but does not draw a line
- around the arrow head. This has two effects.  The arrow head is slightly
- smaller. The tip of the arrow head lies exactly on the endpoint of the vector.
- If the border is drawn, the tip extends beyond the endpoint by some fraction
- of the border linewidth.  Not all terminals support filled arrow heads.
+ Specifying `filled` produces filled arrow heads with a border line around the
+ arrow head.  Specifying `noborder` produces filled arrow heads with no border.
+ In this case the tip of the arrow head lies exactly on the endpoint of the
+ vector and the arrow head is slightly smaller overall. Dashed arrows should
+ always use `noborder`, since a dashed border is ugly.
+ Not all terminals support filled arrow heads.
 
  The line style may be selected from a user-defined list of line styles
  (see `set style line`) or may be defined here by providing values for
